test/fail/basic_syntax/do_while_hide_vars.lly
#[
SyntaxError: v has not been declared.
    from do_while_hide_vars.lly:9
]#

do: {
    var v = 10
    continue
} while v == 10
